# edge_staking_gui

./: .eslintrc.json  Makefile  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: publish_tauri_build.yml  test_tauri_build.yml
src/: App.vue  main.ts  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: check_requirements.rs  get_cpu_info.rs  main.rs  pretty_string.rs  utility.rs  utility_events.rs
src-tauri/src/api/: derivation.rs  get.rs  mod.rs  utility.rs
src-tauri/src/check_requirements/: check_cpu.rs  check_docker.rs  check_edge.rs  check_os.rs  check_specifications.rs  mod.rs  pretty_check_string.rs
src-tauri/src/config/: getters.rs  mod.rs  setters.rs
src-tauri/src/control_edge_cli/: mod.rs
src-tauri/src/device/: mod.rs
src-tauri/src/docker/: mod.rs
src/components/: Add_Device.vue  Auto_Start.vue  Autostart.vue  Current_Status.vue  Curstatus.vue  Get_Edge_Cli_Download_Url.vue  Greet.vue  Install_Edge_Cli.vue  LaunchWindowVisibility.vue  Node_Control.vue  Post_Initialization_Autocheck.vue  Post_Initialization_Node_Control.vue  Post_Initialization_Node_Info.vue  Query_Node_Info.vue  Requirements.vue  Start_Node.vue  Stop_Node.vue  intialization.ts  node_earnings.ts  notification.ts  utils.ts  window_visibility.ts
