[package]
name = "edge_staking_gui"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["path-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
raw-cpuid = "10.7.0"
os_info = "3.7.0"
chrono = "0.4.24"
sysinfo = "0.28.4"
sha2 = "0.10.6"
futures = "0.3.28"
futures-util = "0.3.28"
reqwest = { version = "0.11.16", features = ["json", "stream"] }
confy = "0.5.1"
base64 = "0.21.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
