[package]
name = "edge_staking_gui"
version = "0.7.1"
description = "Easy setup for Edge host."
authors = ["Pod"]
license = ""
repository = "https://github.com/PodTheCoder/edge_staking_gui"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["app-all", "notification-all", "path-all", "system-tray", "window-minimize", "window-set-focus", "window-show", "window-unminimize"] }
serde = { version = "1.0", features = ["derive"] }
raw-cpuid = "10.7.0"
os_info = "3.7.0"
chrono = "0.4.24"
sysinfo = "0.28.4"
sha2 = "0.10.6"
futures = "0.3.28"
futures-util = "0.3.28"
reqwest = { version = "0.11.16", features = ["stream"] }
confy = "0.5.1"
base64 = "0.21.0"
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
